Make store softproof toggle actually affect storing the softproofing.

Now the toggle 'store softproofing in image' also affects whether
Krita would like to save the softproofing config inside the file.

I am not sure what happened to break this. Old files of mine that
were made after Krita got softproofing have no stored softproofing,
meaning this checkbox must've worked at some point, but I cannot
find any commit messages about that?

BUG:419795